--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -59,16 +59,16 @@ RUN bash -c "source /opt/ros/melodic/setup.bash && \
              catkin config --cmake-args -DCMAKE_BUILD_TYPE=Release"
 
 # Build PWC-Net ROS
-RUN git clone https://github.com/ActiveIntelligentSystemsLab/pwc_net_ros.git src/pwc_net_ros
-RUN /bin/bash -c "source /opt/ros/melodic/setup.bash && \
-                  rosdep install --from-paths src -r -y"
-RUN /bin/bash -c "source /opt/ros/melodic/setup.bash && \
-                  catkin build"
+# RUN git clone https://github.com/yubaoliu/pwc_net_ros.git src/pwc_net_ros
+# RUN /bin/bash -c "source /opt/ros/melodic/setup.bash && \
+#                   rosdep install --from-paths src -r -y"
+# RUN /bin/bash -c "source /opt/ros/melodic/setup.bash && \
+#                   catkin build"
 
 # Create symbolic link to trained weight
-RUN ln -s /root/PWC-Net/Caffe/model/pwc_net.caffemodel /root/catkin_ws/src/pwc_net_ros/model/pwc_net.caffemodel
+# RUN ln -s /root/PWC-Net/Caffe/model/pwc_net.caffemodel /root/catkin_ws/src/pwc_net_ros/model/pwc_net.caffemodel
 # Patch to Caffe model
-RUN patch -o /root/catkin_ws/src/pwc_net_ros/model/pwc_net_test.prototxt /root/PWC-Net/Caffe/model/pwc_net_test.prototxt /root/catkin_ws/src/pwc_net_ros/model/pwc_net_test.diff
+# RUN patch -o /root/catkin_ws/src/pwc_net_ros/model/pwc_net_test.prototxt /root/PWC-Net/Caffe/model/pwc_net_test.prototxt /root/catkin_ws/src/pwc_net_ros/model/pwc_net_test.diff
 
 # Load ROS environment at docker exec bash
 RUN echo "source /opt/ros/melodic/setup.bash" >> /root/.bashrc
@@ -76,9 +76,10 @@ RUN echo "source /root/catkin_ws/devel/setup.bash" >> /root/.bashrc
 
 # Install tools for development
 RUN apt-get update && \
-    apt-get install -y vim byobu lxterminal ros-melodic-rqt ros-melodic-rqt-common-plugins
+    apt-get install -y vim byobu lxterminal ros-melodic-rqt ros-melodic-rqt-common-plugins ros-melodic-image-transport-plugins
 
 # Load ROS environment at each run
 COPY ./ros_entrypoint.sh /
+
 ENTRYPOINT ["/ros_entrypoint.sh"]
 CMD ["bash"]
