Add action server and client

--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,12 @@
   <depend>image_transport</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>std_msgs</depend>
+
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>message_generation</exec_depend>
   <exec_depend>compressed_image_transport</exec_depend>
   <exec_depend>image_view</exec_depend>
 </package>
