--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -76,7 +76,7 @@ RUN echo "source /root/catkin_ws/devel/setup.bash" >> /root/.bashrc
 
 # Install tools for development
 RUN apt-get update && \
-    apt-get install -y vim byobu lxterminal ros-melodic-rqt ros-melodic-rqt-common-plugins ros-melodic-image-transport-plugins
+    apt-get install -y vim byobu lxterminal xterm ros-melodic-rqt ros-melodic-rqt-common-plugins ros-melodic-image-transport-plugins gdb
 
 # Load ROS environment at each run
 COPY ./ros_entrypoint.sh /
