--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <depend>actionlib</depend>
   <depend>actionlib_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>aislam_msg</depend>
 
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>message_generation</exec_depend>
