--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,8 @@ version: "2.3"
 services: 
   master:
     build: .
-    command: roscore
+    command: bash
+    # command: roscore
     network_mode: host
     privileged: true
 
@@ -16,7 +17,7 @@ services:
       - QT_X11_NO_MITSHM=1
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
-      - ..:/root/catkin_ws/src/pwc_net_ros/
+      - ..:/root/catkin_ws/src/pwc_net_ros
       # - root:/root
     network_mode: host
     privileged: true
@@ -30,13 +31,13 @@ services:
       - QT_X11_NO_MITSHM=1
     volumes: 
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
-      - ..:/root/catkin_ws/src/pwc_net_ros/
+      - ..:/root/catkin_ws/src/pwcnet_ros
       - ../../aislam_msg:/root/catkin_ws/src/aislam_msg
       - ${DATASET_DIR}:/root/Dataset
       - ${RESULT_DIR}:/root/results
-      # - root:/root
+      # - pwc_net:/root
     network_mode: host
     privileged: true
 
 # volumes: 
-  # root:
+  # pwc_net:
